fix the layout issue

--- a/desktop/core/src/desktop/js/apps/storageBrowser/StorageBrowserPage/StorageBrowserPage.scss
+++ b/desktop/core/src/desktop/js/apps/storageBrowser/StorageBrowserPage/StorageBrowserPage.scss
@@ -33,7 +33,7 @@
 
   .hue-storage-browser__tab {
     display: flex;
-    flex: 1;
+    height: 100%;
     background-color: vars.$fluidx-gray-100;
     padding: 0 16px;
 
